--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,10 @@ Library/PackageCache/com.unity.burst@1.7.3/.Runtime/hostmac/lld filter=lfs diff=
 Library/PackageCache/com.unity.toolchain.macos-arm64-linux-x86_64@1.0.1/data~/payload.tar.7z filter=lfs diff=lfs merge=lfs -text
 Library/PackageCache/com.unity.burst@1.7.3/.Runtime/libburst-llvm-12.dylib filter=lfs diff=lfs merge=lfs -text
 Library/PackageCache/com.unity.burst@1.8.4/.Runtime/libburst-llvm-14.dylib filter=lfs diff=lfs merge=lfs -text
+Library/PackageCache/com.unity.burst@1.8.4/.Runtime/libburst-llvm-14.so filter=lfs diff=lfs merge=lfs -text
+Library/PlayerDataCache/OSXUniversal/Data/sharedassets0.assets.resS filter=lfs diff=lfs merge=lfs -text
+Assets/Character/Prefab/character[[:space:]](3).fbx filter=lfs diff=lfs merge=lfs -text
+Library/ArtifactDB filter=lfs diff=lfs merge=lfs -text
+Library/PackageCache/com.unity.burst@1.8.4/.Runtime/burst-llvm-14.dll filter=lfs diff=lfs merge=lfs -text
+Library/PackageCache/com.unity.burst@1.8.4/.Runtime/hostmac/dsymutil filter=lfs diff=lfs merge=lfs -text
+Library/PackageCache/com.unity.burst@1.8.4/.Runtime/libburst-llvm-10.dylib filter=lfs diff=lfs merge=lfs -text
